welcome.lessons.welcome.bat.bool1.In1020.scala.code
def in1020(a:Int, b:Int):Boolean = {
	if ( 10<a<20 && b>20 || 10<a<20 && b<10 || 10<b<20 && a>20 || 10<b<20 && a<10){
		return true
	}else{ 
		return false
	}
}}
}
